--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::844216228670:role/github-actions
-          aws-region: us-east-1
+          aws-region: eu-north-1
       
       - name: Deploy Lambda Function
         uses: aws-actions/aws-lambda-deploy@v1
