--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,5 @@ jobs:
         with:
           function-name: fvisitorscount-crc
           code-artifacts-dir: ./src
+          handler: lambda_function.lambda_handler
+          runtime: Python 3.13
