Action.yml runtime y handler corregido v2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
           function-name: fvisitorscount-crc
           code-artifacts-dir: ./src
           handler: lambda_function.lambda_handler
-          runtime: Python 3.13
+          runtime: python3.13
