--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,23 @@ on:
       - main
 
 jobs:
+  test-python:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install dependencies
+        run:
+          pip install -r requirements.txt
+
+      - name: Run pytest
+        run: pytest
+        
   deploy:
     runs-on: ubuntu-latest
     permissions:
