--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+          
+      - name: Change ditectory
+        run: cd src
 
       - name: Install dependencies
         run:
@@ -25,6 +28,7 @@ jobs:
         
   deploy:
     runs-on: ubuntu-latest
+    needs: [test-python]
     permissions:
       id-token: write # Required for OIDC authentication
       contents: read  # Required to check out the repository
