--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,20 +7,21 @@ on:
 
 jobs:
   test-python:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-          
-      - name: Install dependencies and run tests
-      run: |
-        cd src
-        pip install -r requirements.txt
-        pytest
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+        
+    - name: Install dependencies
+      working-directory: ./src
+      run: pip install -r requirements.txt
+      
+    - name: Run pytest
+      working-directory: ./src
+      run: pytest
         
   deploy:
     runs-on: ubuntu-latest
